--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ django-crispy-forms==2.3
 django-filter==25.1
 django-widget-tweaks==1.5.0
 gunicorn==23.0.0
+whitenoise==6.9.0
+djangorestframework==3.15.2
+django-environ==0.12.0
